--- a/SignUpPage.xaml
+++ b/SignUpPage.xaml
@@ -28,15 +28,26 @@
         <TextBlock Text="Дата" FontSize="15" Grid.Column="0" Grid.Row="3" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="5"/>
         <TextBlock Text="Время начала:" FontSize="15" Grid.Column="0" Grid.Row="4" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="5"/>
 
-        <TextBox Grid.Column="1" Grid.Row="0" Height="30" FontSize="20"/>
-        <TextBox Grid.Column="1" Grid.Row="1" Height="30" Width="200" FontSize="20" HorizontalAlignment="Left"/>
+        <TextBox Name="TBTitle" Grid.Column="1" Grid.Row="0" Height="30" FontSize="20" Text="{Binding Title}" IsEnabled="False"/>
+        <TextBox Name="TBDuration" Grid.Column="1" Grid.Row="1" Height="30" Width="200" FontSize="20" Text="{Binding Duration}" IsEnabled="False" HorizontalAlignment="Left"/>
 
-        <ComboBox Grid.Column="1" Grid.Row="2" Height="30" Width="300" FontSize="15" HorizontalAlignment="Left"/>
+        <ComboBox Name="ComboClient" Grid.Column="1" Grid.Row="2" Height="30" Width="300" FontSize="15" HorizontalAlignment="Left">
+            <ComboBox.ItemTemplate>
+                <DataTemplate>
+                    <StackPanel Orientation="Horizontal">
+                        <Label Content="{Binding FirstName}"></Label>
+                        <Label Content="{Binding LastName}"></Label>
+                        <Label Content="{Binding Patronymic}"></Label>
+                    </StackPanel>
+                </DataTemplate>
+            </ComboBox.ItemTemplate>
+        </ComboBox>
 
         <DatePicker Grid.Column="1" Grid.Row="3" Height="30" Width="200" FontSize="20" Name="StartDate" HorizontalAlignment="Left"/>
 
         <StackPanel Grid.Column="1" Grid.Row="4" Orientation="Horizontal">
-            <TextBox Name="TBStart" Height="30" Width="200" FontSize="20"/>
+            <TextBox Name="TBStart" Height="30" Width="200" FontSize="20"
+                     TextChanged="TBStart_TextChanged"/>
             <TextBlock Text="Время окончания" FontSize="15" Height="30" Margin="20"/>
             <TextBox Name="TBEnd" Height="30" Width="200" FontSize="20"/>
         </StackPanel>
